
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ __DEBUG__ ;
 scalar_t__ __SYSLOG__ ;
 int exit (int) ;
 int getpid () ;
 int getppid () ;
 int pipe (int*) ;
 int s_fprintf (int ,char*,int ,int ,unsigned int) ;
 int s_perror (char*) ;
 int stderr ;

void s_pipe(int *fd)
{
         if (__DEBUG__ || __SYSLOG__) {
                 s_fprintf(stderr, "PID=%-5i PPID=%-5i: pipe(%x)\n",
getpid(), getppid(), (unsigned int)fd);
         }

         if (pipe(fd) == -1)
         {
                 s_perror("Could not create pipe");
                 exit(3);
         }
}
